# wallfacer

./: .envrc  .gitignore  Cargo.toml  Dioxus.toml  build.rs  flake.nix  input.css  package-lock.json  package.json  package.nix  tailwind.config.js
nix/catppuccin-tailwindcss/: node-packages.nix
nix/realcugan-ncnn-vulkan/: cmakelists.patch
nix/wallfacer/: default.nix
nix/wallpaper-ui/: default.nix
src/: add_resolution.rs  add_wallpapers.rs  align_group.rs  align_selector.rs  app_header.rs  app_state.rs  args.rs  batch.rs  buttons.rs  candidates.rs  cli.rs  config.rs  cropper.rs  drag_overlay.rs  dropdown.rs  filelist.rs  geometry.rs  image_ops.rs  lib.rs  main.rs  pipeline.rs  preview.rs  ratio_selector.rs  resolution_selector.rs  switch.rs  toolbar.rs  trimmer.rs  wallpapers.rs  wallust.rs
src/cli/: pipeline.rs
src/components/: align_buttons.rs  align_selector.rs  app_header.rs  button.rs  candidates.rs  drag_overlay.rs  dropdown.rs  editor.rs  filelist.rs  mod.rs  palette.rs  preview.rs  ratio_buttons.rs  ratio_selector.rs  save_button.rs  slider.rs  wallpaper_button.rs  wallust.rs
src/lib/: aspect_ratio.rs  cli.rs  config.rs  cropper.rs  dragger.rs  geometry.rs  mod.rs  pipeline.rs  wallpapers.rs
src/screens/: adding.rs  app.rs  editor.rs  filelist.rs  mod.rs  palette.rs
src/state/: mod.rs  wall.rs  wallpapers.rs
