[package]
name = "wallfacer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-free-icons = { version = "0.8.6", features = [
    "lucide",
    "material-design-icons-action",
    "material-design-icons-device",
    "material-design-icons-editor",
    "material-design-icons-image",
    "material-design-icons-navigation",
] }
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
csv = "1.3.0"
dioxus = { version = "0.5.6", features = ["desktop"] }
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk.git", branch = "master", features = [
    "window_size",
] }
dirs = "5.0.1"
image = "0.25.4"
indexmap = "2.6.0"
itertools = "0.13.0"
# manganis = "0.2.1"
serde = "1.0.210"
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["process"] }
async-process = "2.3.0"
rust-ini = "0.21.1"
ordered-float = "4.4.0"
wallust = "3.1.0"
rexiv2 = "0.10.0"

[features]
default = ["adding"]
wallust = []
adding = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
derive_partial_eq_without_eq = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
uninlined_format_args = { level = "allow", priority = 1 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
