[package]
name = "wallfacer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-free-icons = { version = "0.9.0", features = [
    "lucide",
    "material-design-icons-action",
    "material-design-icons-device",
    "material-design-icons-editor",
    "material-design-icons-image",
    "material-design-icons-navigation",
] }
clap = { version = "4.5.41", features = ["derive", "string"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.28"
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-sdk = { version = "0.6.0", features = ["window_size"] }
# manganis = "0.2.1"
dirs = "6.0.0"
image = "0.25.6"
indexmap = "2.10.0"
itertools = "0.14.0"
rexiv2 = "0.10.0"
serde = "1.0.219"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["process"] }
wallust = "3.4.0"
rayon = "1.10.0"
toml = "0.9.2"
human-sort = "0.2.2"

[build-dependencies]
clap = { version = "4.5.41", features = ["derive", "string"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.28"

[features]
default = ["trimmer"]
wallust = []
adding = []
trimmer = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
derive_partial_eq_without_eq = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
uninlined_format_args = { level = "allow", priority = 1 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
